crates/nargo_cli/tests/compile_failure/depend_on_bin/src/main.nr
use dep::bin_dep;

fn main(x : Field) {
    assert_eq(x, 1);
}
